--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -792,6 +792,74 @@ body {
 .cid-sHEeiC9sJh .mbr-section-button {
   margin-top: 25px;
 }
+.cid-uXJ3MvSjKB {
+  background-image: url("../../../assets/images/bbbb.jpg");
+}
+.cid-uXJ3MvSjKB .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-uXJ3MvSjKB .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+@media (max-width: 992px) {
+  .cid-uXJ3MvSjKB .container {
+    padding: 0 16px;
+  }
+}
+.cid-uXJ3MvSjKB .row {
+  justify-content: center;
+  margin: 0 20px;
+}
+@media (max-width: 992px) {
+  .cid-uXJ3MvSjKB .row {
+    margin: 0 10px;
+  }
+}
+.cid-uXJ3MvSjKB .row .card {
+  padding: 0;
+}
+.cid-uXJ3MvSjKB .title-wrapper {
+  margin-bottom: 40px;
+}
+@media (max-width: 992px) {
+  .cid-uXJ3MvSjKB .title-wrapper {
+    margin-bottom: 20px;
+  }
+}
+.cid-uXJ3MvSjKB .title-wrapper .mbr-section-title {
+  margin-bottom: 0;
+}
+.cid-uXJ3MvSjKB .mbr-figure {
+  align-self: auto;
+}
+.cid-uXJ3MvSjKB .mbr-figure iframe {
+  height: 750px !important;
+  border-radius: 20px !important;
+}
+@media (max-width: 992px) {
+  .cid-uXJ3MvSjKB .mbr-figure iframe {
+    height: 350px !important;
+  }
+}
+.cid-uXJ3MvSjKB .mbr-figure .app-video-wrapper img {
+  height: 750px;
+  border-radius: 20px !important;
+  object-fit: cover;
+}
+@media (max-width: 992px) {
+  .cid-uXJ3MvSjKB .mbr-figure .app-video-wrapper img {
+    height: 350px;
+  }
+}
+.cid-uXJ3MvSjKB .mbr-section-title {
+  color: #fdfcfc;
+}
 .cid-sHEflOBRZv {
   padding-top: 5rem;
   padding-bottom: 5rem;
